scrollbar fix

--- a/src/components/SearchPanel/SearchPanel.module.css
+++ b/src/components/SearchPanel/SearchPanel.module.css
@@ -15,6 +15,12 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     .pagination {
       display: flex;
@@ -38,7 +44,7 @@
 
         &:disabled,
         &[disabled] {
-            visibility: hidden;
+          visibility: hidden;
         }
       }
     }
